added servlet for form data

--- a/getParameters.html
+++ b/getParameters.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <form action='/ssp/getParameter' style="width:max-content;" class="mx-auto border mt-5 py-4 px-5">
+        <h6>Servlet Form Data</h6>
+        <h6>using getParameters()</h6>
         <div class="m-2">
             <div>
                 <label for="fname">First Name</label>
@@ -33,7 +35,9 @@
             </div>
             <input type="text" name="rollno"/>
         </div>
-        <input class="m-2" type="submit" value="getParameters()"/>
+        <div class='m-2 mt-3'>
+            <input class="w-100" type="submit" value="Submit"/>
+        </div>
     </form>   
 </body>
 </html>
