--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="pb-2 pt-4">
                 <h5 class="m-2">Form Data</h5>
                 <div class="d-flex">
-                    <a href="/ssp/getParameter" style="color:black; cursor:pointer;">
+                    <a href="/ssp/getParametersHtml" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
                             <b>Get Parameter Servlet</b>
                         </div>
