--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                             <b>Counter Servlet</b>
                         </div>
                     </a>
-                    <a href="/ssp/counter" style="color:black; cursor:pointer;">
+                    <a href="/ssp/persistentCounter" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
                             <b>Persistent Counter Servlet</b>
                         </div>
                     </a>
                 </div>
             </div>
-            <div class="pb-2 pt-4">
+            <div class="pb-2 pt-4 border-bottom">
                 <h5 class="m-2">Form Data</h5>
                 <div class="d-flex">
                     <a href="/ssp/getParametersHtml" style="color:black; cursor:pointer;">
@@ -48,7 +48,21 @@
                         </div>
                     </a>
                 </div>
-                
+            </div>
+            <div class="pb-2 pt-4">
+                <h5 class="m-2">Sign Up/ Sign In</h5>
+                <div class="d-flex">
+                    <a href="/ssp/signUpForm" style="color:black; cursor:pointer;">
+                        <div class="card px-2 py-3 m-2">
+                            <b>Sign Up Servlet</b>
+                        </div>
+                    </a>
+                    <a href="/ssp/signInForm" style="color:black; cursor:pointer;">
+                        <div class="card px-2 py-3 m-2">
+                            <b>Sign In Servlet</b>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
