changes to html and servlet editing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
         <div class="border m-2 p-3" style="flex-wrap:wrap; width:max-content;">
             <h3 class="m-2">Server Side Programming</h3>
+            <div style="display:none;">C:\Program Files\Apache Software Foundation\Tomcat 9.0\lib\servlet-api.jar</div>
             <div class="border-bottom pb-2 pt-4">
                 <h5 class="m-2">Display Only</h5>
                 <div class="d-flex">
@@ -37,14 +38,24 @@
             <div class="pb-2 pt-4 border-bottom">
                 <h5 class="m-2">Form Data</h5>
                 <div class="d-flex">
-                    <a href="/ssp/getParametersHtml" style="color:black; cursor:pointer;">
+                    <a href="/ssp/StudentEntry.html" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
-                            <b>Get Parameter Servlet</b>
+                            <b>Student Data Entry</b>
                         </div>
                     </a>
-                    <a href="/ssp/hello" style="color:black; cursor:pointer;">
+                </div>
+            </div>
+            <div class="pb-2 pt-4 border-bottom">
+                <h5 class="m-2">Cookies</h5>
+                <div class="d-flex">
+                    <a href="/ssp/nonPersistentCookie" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
-                            <b>Get Parameter Names Servlet</b>
+                            <b>Non Persistent Cookie</b>
+                        </div>
+                    </a>
+                    <a href="/ssp/persistentCookie" style="color:black; cursor:pointer;">
+                        <div class="card px-2 py-3 m-2">
+                            <b>Persistent Cookie</b>
                         </div>
                     </a>
                 </div>
@@ -52,12 +63,12 @@
             <div class="pb-2 pt-4">
                 <h5 class="m-2">Sign Up/ Sign In</h5>
                 <div class="d-flex">
-                    <a href="/ssp/signUpForm" style="color:black; cursor:pointer;">
+                    <a href="/ssp/Signup.html" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
                             <b>Sign Up Servlet</b>
                         </div>
                     </a>
-                    <a href="/ssp/signInForm" style="color:black; cursor:pointer;">
+                    <a href="/ssp/Signin.html" style="color:black; cursor:pointer;">
                         <div class="card px-2 py-3 m-2">
                             <b>Sign In Servlet</b>
                         </div>
